--- a/App_Code/Helper.cshtml
+++ b/App_Code/Helper.cshtml
@@ -6,7 +6,7 @@
     int roundedRating= (int)Math.Round(image.Rating);
     <div>
         <div class="ellipsis">@image.Title</div>
-        <a href="@detailActionUrl" target="_blank">
+        <a href="@detailActionUrl">
             <div class="photo"
                  style="background: url(@imageUrl) no-repeat center center;
                  background-size: cover;"
