--- a/Content/Site.css
+++ b/Content/Site.css
@@ -65,7 +65,7 @@ legend {
     }
 
 
-.photoContainersGrid {
+.photosContainerGrid {
     display: grid;
     grid-gap: 1em;
     grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
